--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 h1{
-    color: sienna;
+    color: rgb(173, 0, 0);
     text-align: center;
+    font-style: italic;
 }
 
 footer{
-    background-color: chocolate;
+    background-color: rgb(248, 114, 114);
     width: 100%;
     text-align: center;
     position: fixed;
     bottom: 0px;
     left: 0px;
+    float: left;
 }
 footer a{
     color: black;
@@ -19,7 +21,8 @@ footer a{
 
 
 body{
-    background-color: salmon;
+    background: repeating-linear-gradient( 135deg, #60bc8e, #60bc8e 10px, salmon 10px, salmon 20px );
+    /*background-color: salmon;*/
 }
 
 
@@ -28,13 +31,13 @@ body{
 
 .container{
     width: 33%;
-    height: 100%;
     margin: auto;
 }
 .container .result-screen{
     width: 100%;
     height: 100px;
-    background: rgb(78, 78, 78);
+    background: rgb(90, 90, 90);
+    color: white;
 }
 
 .container .result-screen .screen{
@@ -45,23 +48,37 @@ body{
 .container .result-screen .previous-number{
     height: 40%;
     font-size: 35px;
+    margin: auto 10px;
 }
 .container .result-screen .current-number{
     height: 60%;
     font-size: 50px;
+    margin: auto 10px;
 }
 
-.container .button-holder{
-    
+.container .result-screen .unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
 }
+
 .container .button-holder button{
     float: left;
     border: 1px solid;
     padding: 0;
     margin: 0;
-    height: 75ps;
+    height: 75px;
     font-size: 50px;
 }
+
+.container .button-holder button::after{
+    clear: both;
+}
+
 .container .button-holder .single-button{
     width: 25%;
 }
@@ -72,7 +89,45 @@ body{
 .container .button-holder .number-button{
     background: rgb(131, 131, 131);
 }
-
+.container .button-holder .number-button:hover{
+    background: rgb(161, 161, 161);
+}
 .container .button-holder .operator-button{
     background: rgb(255, 166, 0);
+}
+.container .button-holder .operator-button:hover{
+    background: rgb(255, 208, 0);
+}
+.container .button-holder .other-button{
+    background: rgb(180, 180, 180);
+}
+.container .button-holder .other-button:hover{
+    background: rgb(219, 219, 219);
+}
+
+.clear-div{
+    clear: both;
+}
+
+.round-border-up{
+    border-radius:35px 35px 0 0;
+}
+.round-border-down-right{
+    border-radius: 0 0 35px 0;
+}
+.round-border-down-left{
+    border-radius: 0 0 0 35px;
+
+}
+
+/******************************************/
+
+.instruction{
+    float: left;
+    max-width: 15%;
+    height: auto;
+    margin: 5%;
+    font-size: smaller;   
+    font-style: italic;
+    font-weight: 1000;
 }
